--- a/new1.html
+++ b/new1.html
@@ -4,7 +4,7 @@
   <title>Attractive Live Analog Clock</title>
 </head>
 <body>
-    <div class="analog-clock">
+    <div class="the analog-clock">
         <div class="hours">
             <div class="hr" id="hr"></div>
        
