--- a/new1.html
+++ b/new1.html
@@ -7,6 +7,8 @@
     <div class="analog-clock">
         <div class="hours">
             <div class="hr" id="hr"></div>
+            <div class="manjanna" id="hr"></div>
+
        
     <footer>
     
