--- a/new1.html
+++ b/new1.html
@@ -4,10 +4,12 @@
   <title>Attractive Live Analog Clock</title>
 </head>
 <body>
+    <h2>hello</h2>
     <div class="analog-clock">
         <div class="hours">
             <div class="hr" id="hr"></div>
             <div class="manjanna" id="hr"></div>
+            
 
        
     <footer>
